# celestia

./: .gitmodules  AUTHORS  CMakeLists.txt  celestia.cfg
cmake/: FindDirectX.cmake
libraries/Eigen/Eigen/: Core
libraries/curveplot/: CMakeLists.txt
libraries/sdl2/: CMakeLists.txt
libraries/sdl2/src/stdlib/: SDL_stdlib.c
src/: CMakeLists.txt  config.h
src/celengine/: render.cpp  render.h  renderovr.cpp  tokenizer.cpp  tokenizer.h
src/celestia/: avicapture.cpp  celestiacore.cpp  oggtheoracapture.cpp  sdl2main.cpp
src/celestia/kde/: celestialbrowser.cpp  eclipsefinderdlg.cpp  kdeapp.cpp  kdeuniquecelestia.cpp  selectionpopup.cpp
src/celutil/: basictypes.h  directory.cpp  directory.h  intl.cpp  intl.h  timer.cpp  util.h
windows/: libintl.h
